recursion.cons.increasing.Increasing.scala.error
Compilation error:
Increasing:9: error: missing arguments for method length;
follow this method with `_' if you want to treat it as a partially applied function
};if (length == 1) {
      ^